regression_test_report_20250616_093201.txt
回归测试报告 - 2025-06-16 09:32:01
============================================================

Shell配置测试: PASS

Zsh连接测试: PASS

配置文件语法检查: FAIL
  错误: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/Users/xuyehua/Code/remote-terminal-mcp/enhanced_config_manager.py", line 17, in <module>
    from docker_config_manager import DockerConfigManager, DockerEnvironmentConfig
  File "/Users/xuyehua/Code/remote-terminal-mcp/docker_config_manager.py", line 18
    from colorama import Fore, Back, Style, init
    ^
IndentationError: expected an indented block


MCP服务器语法检查: FAIL
  错误: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/Users/xuyehua/Code/remote-terminal-mcp/python/mcp_server.py", line 21, in <module>
    from enhanced_config_manager import EnhancedConfigManager
  File "/Users/xuyehua/Code/remote-terminal-mcp/enhanced_config_manager.py", line 17, in <module>
    from docker_config_manager import DockerConfigManager, DockerEnvironmentConfig
  File "/Users/xuyehua/Code/remote-terminal-mcp/docker_config_manager.py", line 18
    from colorama import Fore, Back, Style, init
    ^
IndentationError: expected an indented block


